Web katmanı kodlanıyor

--- a/HealthyDuty.Web/Views/Shared/_Layout.cshtml
+++ b/HealthyDuty.Web/Views/Shared/_Layout.cshtml
@@ -193,7 +193,75 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-layers"></i> Cities
+                        </a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/City/Add">
+                                    <i class="nav-icon icon-cursor"></i> City Add
+                                </a>
+                            </li>
 
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/City/List">
+                                    <i class="nav-icon icon-cursor"></i> City List
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-layers"></i> Hospital
+                        </a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Hospital/Add">
+                                    <i class="nav-icon icon-cursor"></i> Hospital Add
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Hospital/List">
+                                    <i class="nav-icon icon-cursor"></i> Hospital List
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-layers"></i> Profile
+                        </a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Profile/Add">
+                                    <i class="nav-icon icon-cursor"></i> Profile Add
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Profile/List">
+                                    <i class="nav-icon icon-cursor"></i> Profile List
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-layers"></i> Profile detail
+                        </a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/ProfileDetail/BatchEdit">
+                                    <i class="nav-icon icon-cursor"></i> Profile detail
+                                </a>
+                            </li>
+
+                           
+                        </ul>
+                    </li>
 
 
 
