Web - Need For Blood

--- a/HealthyDuty.Web/Views/Personnel/Login.cshtml
+++ b/HealthyDuty.Web/Views/Personnel/Login.cshtml
@@ -137,6 +137,7 @@
                         <ul class="list-unstyled">
                             <li>User Name: <strong>admin</strong> Password: <strong>1</strong> - System Admin Profile</li>
                             <li>User Name: <strong>talha</strong> Password: <strong>1</strong> - Hospital Personnel Profile</li>
+                            <li>User Name: <strong>emre</strong> Password: <strong>1</strong> - Other Hospital Personnel Profile</li>
                         </ul>
                         </p>
                     </div>
